tests/fixtures/guardrails/invalid/route-shadowed-imported-binding-bypass/app/routes/products.ts
import { loadHealthCheck } from "~/app/services/health.server";

void loadHealthCheck;

export async function loader(loadHealthCheck) {
  return loadHealthCheck();
}
